--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "^1.16.1",
     "@react-navigation/stack": "^5.14.5",
     "expo": "~41.0.1",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
+    "react-chip-input": "^1.1.0",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-elements": "^3.4.2",
     "react-native-floating-action": "^1.21.0",
+    "react-native-form-select-picker": "^0.0.12",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.3.0",
